<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.afra.cse486.project03.MainActivity"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/sign_up_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_edittextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/name"
            android:layout_margin="30dp" />

        <EditText
            android:id="@+id/nid_edittextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/name_edittextview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/nid"
            android:layout_margin="30dp" />

        <TextView
            android:id="@+id/blood_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/blood_group"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            app:layout_constraintTop_toBottomOf="@+id/nid_edittextview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            android:layout_margin="30dp"
            android:inputType="none"
            android:textIsSelectable="false"
            android:longClickable="false"
            />

        <EditText
            android:id="@+id/dob_edittextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth_dd_mm_yyyy"
            app:layout_constraintTop_toBottomOf="@+id/blood_group"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="30dp"
            android:inputType="date"

            />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@+id/dob_edittextview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="30dp"
            android:textColorHint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
